<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xrm_zmp_interface</name>
  <version>0.1.0</version>
  <description>xrm_zmp_interface</description>
  <maintainer email="ma.shanpeng.mn6@is.naist.jp">mashanpeng</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_control_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <lib>
    <name>libhevcontrol</name>
    <install_path>lib</install_path>
    <path>lib/libhevcontrol.so</path>
    </lib>
    <lib>
    <name>libUSBCAN</name>
    <install_path>lib</install_path>
    <path>lib/libUSBCAN.so</path>
    </lib>
  </export>
</package>
